.antlr/Project2Parser.java
// Generated from c:\Users\rieck\Documents\Coding\PLC\Project2\Project2\RieckProject1\New folder\Project2\Project2.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Project2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, FOR=7, TO=8, WHILE=9, 
		DO=10, DOWNTO=11, AND=12, OR=13, NOT=14, VAR=15, IF=16, THEN=17, ELSE=18, 
		CONST=19, PROGRAM=20, CASE=21, BOOLEAN=22, REAL=23, BEGIN=24, END=25, 
		WRITE=26, READ=27, OF=28, EQUAL=29, NOTEQUAL=30, ELSETHEN=31, ELSEIF=32, 
		BREAK=33, CONTINUE=34, PROCEDURE=35, FUNCTION=36, SPECIAL=37, COMPARISONS=38, 
		COMMENT=39, MULDIVMOD=40, PLUSMINUS=41, Bool=42, Varname=43, Real=44, 
		WS=45;
	public static final int
		RULE_program = 0, RULE_mainblock = 1, RULE_block = 2, RULE_decconsts = 3, 
		RULE_lines = 4, RULE_line = 5, RULE_callfunc = 6, RULE_funcparam = 7, 
		RULE_funcdef = 8, RULE_funcvardef = 9, RULE_procdef = 10, RULE_callproc = 11, 
		RULE_fordo = 12, RULE_whiledo = 13, RULE_ifstate = 14, RULE_thenstate = 15, 
		RULE_elseifstate = 16, RULE_elsestate = 17, RULE_casestate = 18, RULE_cases = 19, 
		RULE_vardec = 20, RULE_varinit = 21, RULE_varre = 22, RULE_stdin = 23, 
		RULE_writeln = 24, RULE_exprff = 25, RULE_exprb = 26, RULE_var = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "mainblock", "block", "decconsts", "lines", "line", "callfunc", 
			"funcparam", "funcdef", "funcvardef", "procdef", "callproc", "fordo", 
			"whiledo", "ifstate", "thenstate", "elseifstate", "elsestate", "casestate", 
			"cases", "vardec", "varinit", "varre", "stdin", "writeln", "exprff", 
			"exprb", "var"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "';'", "':'", "'('", "','", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "FOR", "TO", "WHILE", "DO", 
			"DOWNTO", "AND", "OR", "NOT", "VAR", "IF", "THEN", "ELSE", "CONST", "PROGRAM", 
			"CASE", "BOOLEAN", "REAL", "BEGIN", "END", "WRITE", "READ", "OF", "EQUAL", 
			"NOTEQUAL", "ELSETHEN", "ELSEIF", "BREAK", "CONTINUE", "PROCEDURE", "FUNCTION", 
			"SPECIAL", "COMPARISONS", "COMMENT", "MULDIVMOD", "PLUSMINUS", "Bool", 
			"Varname", "Real", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Project2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Project2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode PROGRAM() { return getToken(Project2Parser.PROGRAM, 0); }
		public TerminalNode Varname() { return getToken(Project2Parser.Varname, 0); }
		public MainblockContext mainblock() {
			return getRuleContext(MainblockContext.class,0);
		}
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public List<FuncdefContext> funcdef() {
			return getRuleContexts(FuncdefContext.class);
		}
		public FuncdefContext funcdef(int i) {
			return getRuleContext(FuncdefContext.class,i);
		}
		public List<ProcdefContext> procdef() {
			return getRuleContexts(ProcdefContext.class);
		}
		public ProcdefContext procdef(int i) {
			return getRuleContext(ProcdefContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(PROGRAM);
			setState(57);
			match(Varname);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(58);
				vardec();
				}
			}

			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(61);
				funcdef();
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PROCEDURE) {
				{
				{
				setState(67);
				procdef();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			mainblock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainblockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(Project2Parser.BEGIN, 0); }
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public TerminalNode END() { return getToken(Project2Parser.END, 0); }
		public MainblockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainblock; }
	}

	public final MainblockContext mainblock() throws RecognitionException {
		MainblockContext _localctx = new MainblockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainblock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(BEGIN);
			setState(76);
			lines();
			setState(77);
			match(END);
			setState(78);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(Project2Parser.BEGIN, 0); }
		public LinesContext lines() {
			return getRuleContext(LinesContext.class,0);
		}
		public TerminalNode END() { return getToken(Project2Parser.END, 0); }
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(80);
				vardec();
				}
			}

			setState(83);
			match(BEGIN);
			setState(84);
			lines();
			setState(85);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecconstsContext extends ParserRuleContext {
		public VarContext co;
		public ExprbContext er;
		public TerminalNode CONST() { return getToken(Project2Parser.CONST, 0); }
		public TerminalNode EQUAL() { return getToken(Project2Parser.EQUAL, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public ExprbContext exprb() {
			return getRuleContext(ExprbContext.class,0);
		}
		public ExprffContext exprff() {
			return getRuleContext(ExprffContext.class,0);
		}
		public DecconstsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decconsts; }
	}

	public final DecconstsContext decconsts() throws RecognitionException {
		DecconstsContext _localctx = new DecconstsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decconsts);
		try {
			setState(99);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(CONST);
				setState(88);
				((DecconstsContext)_localctx).co = var();
				setState(89);
				match(EQUAL);
				setState(90);
				((DecconstsContext)_localctx).er = exprb(0);
				setState(91);
				match(T__1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(CONST);
				setState(94);
				((DecconstsContext)_localctx).co = var();
				setState(95);
				match(EQUAL);
				setState(96);
				exprff(0);
				setState(97);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinesContext extends ParserRuleContext {
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public LinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lines; }
	}

	public final LinesContext lines() throws RecognitionException {
		LinesContext _localctx = new LinesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lines);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101);
				line();
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FOR) | (1L << WHILE) | (1L << VAR) | (1L << IF) | (1L << CASE) | (1L << BEGIN) | (1L << WRITE) | (1L << READ) | (1L << BREAK) | (1L << CONTINUE) | (1L << Varname))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
	 
		public LineContext() { }
		public void copyFrom(LineContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CallfordoContext extends LineContext {
		public FordoContext fordo() {
			return getRuleContext(FordoContext.class,0);
		}
		public CallfordoContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class VarrelineContext extends LineContext {
		public VarreContext varre() {
			return getRuleContext(VarreContext.class,0);
		}
		public VarrelineContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class CallIfstateContext extends LineContext {
		public IfstateContext ifstate() {
			return getRuleContext(IfstateContext.class,0);
		}
		public CallIfstateContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class CallwhiledoContext extends LineContext {
		public WhiledoContext whiledo() {
			return getRuleContext(WhiledoContext.class,0);
		}
		public CallwhiledoContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class BreakContext extends LineContext {
		public TerminalNode BREAK() { return getToken(Project2Parser.BREAK, 0); }
		public BreakContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class CallproclineContext extends LineContext {
		public CallprocContext callproc() {
			return getRuleContext(CallprocContext.class,0);
		}
		public CallproclineContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class ContinueContext extends LineContext {
		public TerminalNode CONTINUE() { return getToken(Project2Parser.CONTINUE, 0); }
		public ContinueContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class CallfunclineContext extends LineContext {
		public CallfuncContext callfunc() {
			return getRuleContext(CallfuncContext.class,0);
		}
		public CallfunclineContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class BlocklineContext extends LineContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlocklineContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class WritelineContext extends LineContext {
		public WritelnContext writeln() {
			return getRuleContext(WritelnContext.class,0);
		}
		public WritelineContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class StdinlineContext extends LineContext {
		public StdinContext stdin() {
			return getRuleContext(StdinContext.class,0);
		}
		public StdinlineContext(LineContext ctx) { copyFrom(ctx); }
	}
	public static class CallcasestateContext extends LineContext {
		public CasestateContext casestate() {
			return getRuleContext(CasestateContext.class,0);
		}
		public CallcasestateContext(LineContext ctx) { copyFrom(ctx); }
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_line);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new BlocklineContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				block();
				}
				break;
			case 2:
				_localctx = new VarrelineContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				varre();
				setState(108);
				match(T__1);
				}
				break;
			case 3:
				_localctx = new StdinlineContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				stdin();
				}
				break;
			case 4:
				_localctx = new WritelineContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(111);
				writeln();
				}
				break;
			case 5:
				_localctx = new CallfunclineContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(112);
				callfunc();
				}
				break;
			case 6:
				_localctx = new CallproclineContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(113);
				callproc();
				}
				break;
			case 7:
				_localctx = new CallIfstateContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(114);
				ifstate();
				}
				break;
			case 8:
				_localctx = new CallcasestateContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(115);
				casestate();
				}
				break;
			case 9:
				_localctx = new CallfordoContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(116);
				fordo();
				}
				break;
			case 10:
				_localctx = new CallwhiledoContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(117);
				whiledo();
				}
				break;
			case 11:
				_localctx = new BreakContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(118);
				match(BREAK);
				setState(119);
				match(T__1);
				}
				break;
			case 12:
				_localctx = new ContinueContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(120);
				match(CONTINUE);
				setState(121);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallfuncContext extends ParserRuleContext {
		public VarContext name;
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public TerminalNode EQUAL() { return getToken(Project2Parser.EQUAL, 0); }
		public List<FuncparamContext> funcparam() {
			return getRuleContexts(FuncparamContext.class);
		}
		public FuncparamContext funcparam(int i) {
			return getRuleContext(FuncparamContext.class,i);
		}
		public CallfuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callfunc; }
	}

	public final CallfuncContext callfunc() throws RecognitionException {
		CallfuncContext _localctx = new CallfuncContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_callfunc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			var();
			setState(125);
			match(T__2);
			setState(126);
			match(EQUAL);
			setState(127);
			((CallfuncContext)_localctx).name = var();
			setState(128);
			match(T__3);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << NOT) | (1L << SPECIAL) | (1L << Bool) | (1L << Varname) | (1L << Real))) != 0)) {
				{
				setState(129);
				funcparam();
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(130);
					match(T__4);
					setState(131);
					funcparam();
					}
					}
					setState(136);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(139);
			match(T__5);
			setState(140);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncparamContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public ExprbContext exprb() {
			return getRuleContext(ExprbContext.class,0);
		}
		public ExprffContext exprff() {
			return getRuleContext(ExprffContext.class,0);
		}
		public FuncparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcparam; }
	}

	public final FuncparamContext funcparam() throws RecognitionException {
		FuncparamContext _localctx = new FuncparamContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcparam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(142);
				var();
				}
				break;
			case 2:
				{
				setState(143);
				exprb(0);
				}
				break;
			case 3:
				{
				setState(144);
				exprff(0);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefContext extends ParserRuleContext {
		public VarContext name;
		public Token op;
		public TerminalNode FUNCTION() { return getToken(Project2Parser.FUNCTION, 0); }
		public TerminalNode BEGIN() { return getToken(Project2Parser.BEGIN, 0); }
		public TerminalNode END() { return getToken(Project2Parser.END, 0); }
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public TerminalNode BOOLEAN() { return getToken(Project2Parser.BOOLEAN, 0); }
		public TerminalNode REAL() { return getToken(Project2Parser.REAL, 0); }
		public List<FuncvardefContext> funcvardef() {
			return getRuleContexts(FuncvardefContext.class);
		}
		public FuncvardefContext funcvardef(int i) {
			return getRuleContext(FuncvardefContext.class,i);
		}
		public VardecContext vardec() {
			return getRuleContext(VardecContext.class,0);
		}
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public FuncdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
	}

	public final FuncdefContext funcdef() throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(FUNCTION);
			setState(148);
			((FuncdefContext)_localctx).name = var();
			setState(149);
			match(T__3);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Varname) {
				{
				{
				setState(150);
				funcvardef();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(156);
			match(T__5);
			setState(157);
			match(T__2);
			setState(158);
			((FuncdefContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==BOOLEAN || _la==REAL) ) {
				((FuncdefContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(159);
			match(T__1);
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(160);
				vardec();
				}
			}

			setState(163);
			match(BEGIN);
			setState(165); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(164);
				line();
				}
				}
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FOR) | (1L << WHILE) | (1L << VAR) | (1L << IF) | (1L << CASE) | (1L << BEGIN) | (1L << WRITE) | (1L << READ) | (1L << BREAK) | (1L << CONTINUE) | (1L << Varname))) != 0) );
			setState(169);
			match(END);
			setState(170);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncvardefContext extends ParserRuleContext {
		public VarContext va;
		public Token op;
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public TerminalNode BOOLEAN() { return getToken(Project2Parser.BOOLEAN, 0); }
		public TerminalNode REAL() { return getToken(Project2Parser.REAL, 0); }
		public FuncvardefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcvardef; }
	}

	public final FuncvardefContext funcvardef() throws RecognitionException {
		FuncvardefContext _localctx = new FuncvardefContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funcvardef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(172);
			((FuncvardefContext)_localctx).va = var();
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(173);
				match(T__4);
				setState(174);
				((FuncvardefContext)_localctx).va = var();
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(180);
			match(T__2);
			setState(181);
			((FuncvardefContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==BOOLEAN || _la==REAL) ) {
				((FuncvardefContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
